# db-query

./: .gitignore  FEATURE_EXPORT.md  Makefile  README.md  pyproject.toml  test.rest
.github/: copilot-instructions.md
.github/agents/: codereview.agent.md  copilot-instructions.md
.specify/memory/: constitution.md
backend/: README.md  pyproject.toml  test_mysql_connection.py  validate_mysql_support.py
backend/src/: __init__.py  main.py
backend/src/api/v1/: databases.py  exports.py  queries.py
backend/src/models/: __init__.py  database.py  errors.py  export.py  metadata.py  query.py
backend/src/services/: db_connection.py  metadata_extractor.py  nl_converter.py  query_executor.py  storage.py
backend/src/services/export/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  json_exporter.py
backend/src/utils/: camel_case.py  exceptions.py  filename.py  sql_validator.py
backend/tests/: test_db_connection.py  test_mysql_integration.py
code-reviews/: index.md  refactoring-summary.md  review-2025-12-25.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ColumnDetails.tsx  ExportButton.tsx  QueryResults.tsx  SchemaTree.tsx  SqlEditor.tsx
frontend/src/pages/: DatabaseList.tsx  QueryTool.tsx
specs/001-db-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mysql-support/: IMPLEMENTATION_SUMMARY.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-data-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/w2/: instructions.md
(+8 files in other folders)
